@@ -7,18 +7,13 @@ import javax.enterprise.context.ApplicationScoped;
 import org.cyk.utility.__kernel__.AbstractApplicationScopeLifeCycleListener;
 import org.cyk.utility.__kernel__.annotation.Controller;
 import org.cyk.utility.__kernel__.function.FunctionRunnableMap;
+import org.cyk.utility.__kernel__.identifier.resource.ParameterName;
+import org.cyk.utility.__kernel__.string.StringHelper;
 import org.cyk.utility.client.controller.component.window.WindowRenderTypeDialog;
 import org.cyk.utility.client.controller.component.window.WindowRenderTypeNormal;
 import org.cyk.utility.client.controller.icon.IconIdentifierGetterFontAwsome;
 import org.cyk.utility.client.controller.icon.IconIdentifierGetterImpl;
-import org.cyk.utility.client.controller.navigation.NavigationIdentifierStringBuilderExtensionFunctionRunnableImpl;
-import org.cyk.utility.client.controller.navigation.NavigationIdentifierStringBuilderExtensionImpl;
-import org.cyk.utility.client.controller.proxy.ProxyGetterImpl;
-import org.cyk.utility.client.controller.proxy.ProxyGetterRestEasyFunctionRunnableImpl;
-import org.cyk.utility.identifier.resource.UniformResourceIdentifierParameterValueMatrix;
-import org.cyk.utility.instance.InstanceBuilder;
 import org.cyk.utility.instance.InstanceGetter;
-import org.cyk.utility.__kernel__.string.StringHelper;
 import org.cyk.utility.system.node.SystemNodeClient;
 
 @ApplicationScoped
@@ -30,17 +25,12 @@ public class ApplicationScopeLifeCycleListener extends AbstractApplicationScopeL
 		__setQualifierClassTo__(Controller.class, InstanceGetter.class);
 		//TODO remove FunctionRunnableImpl
 		__inject__(FunctionRunnableMap.class).set(IconIdentifierGetterImpl.class, IconIdentifierGetterFontAwsome.class,LEVEL);
-		__inject__(FunctionRunnableMap.class).set(ProxyGetterImpl.class, ProxyGetterRestEasyFunctionRunnableImpl.class,LEVEL);
-		
-		__setQualifierClassTo__(Controller.class, InstanceBuilder.class);
-		
-		__inject__(FunctionRunnableMap.class).set(NavigationIdentifierStringBuilderExtensionImpl.class, NavigationIdentifierStringBuilderExtensionFunctionRunnableImpl.class,LEVEL);
-		
-		__inject__(UniformResourceIdentifierParameterValueMatrix.class).setClasses(WindowRenderTypeNormal.class,WindowRenderTypeDialog.class);
+		//__inject__(FunctionRunnableMap.class).set(ProxyGetterImpl.class, ProxyGetterRestEasyFunctionRunnableImpl.class,LEVEL);
 		
 		__initializeApplication__(object);
 		
 		__inject__(org.cyk.utility.ApplicationScopeLifeCycleListener.class).initialize(null);
+		ParameterName.addClasses(WindowRenderTypeNormal.class,WindowRenderTypeDialog.class);
 	}
 	
 	protected void __initializeApplication__(Object object) {
@@ -54,6 +44,7 @@ public class ApplicationScopeLifeCycleListener extends AbstractApplicationScopeL
 	
 	/**/
 	
-	public static final Integer LEVEL = new Integer(org.cyk.utility.ApplicationScopeLifeCycleListener.LEVEL+1);
+	@Deprecated
+	public static final Integer LEVEL = Integer.valueOf(org.cyk.utility.ApplicationScopeLifeCycleListener.LEVEL+1);
 	
 }
